--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icon.ico" />
-    <meta
+    <!-- <meta
       http-equiv="content-security-policy"
       content="default-src 'self'; style-src 'self' 'unsafe-inline';"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;"
+    /> -->
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -33,6 +37,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="modal-portal"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
