--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -33,7 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="fonts/fonts.css" />
-    <base href="." />
+    <base href="./" />
     <title>Zaibatsu Bud</title>
   </head>
   <body>
